--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div id="secondHalf">
         <button id="changeButton1">Click Me To Change in RGB Value</button>
     </div>
+    <div id="thirdHalf">
+        <button id="changeButton2">Click Me To Change in HEX Value</button>
+    </div>
     
     <script src="index.js"></script>
 </body>
