--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="firstHalf">
-        <button id="changeButton">Click Me To Change</button>
-    </div>
-    <div id="secondHalf">
-        <button id="changeButton1">Click Me To Change in RGB Value</button>
-    </div>
-    <div id="thirdHalf">
-        <button id="changeButton2">Click Me To Change in HEX Value</button>
-    </div>
-    
+    <main>
+        <section id="display">
+            
+        </section>
+        <section id="buttonContainer">
+            <button data-allClear>AC</button>
+            <button data-clear>C</button>
+                <button class="numDisplay" data-operation>*</button>
+                <button class="numDisplay" data-operation>/</button>
+                <button class="numDisplay" data-operation>+</button>
+                <button class="numDisplay" data-operation>-</button>
+                <button class="numDisplay" data-number>1</button>
+                <button class="numDisplay" data-number>2</button>
+                <button class="numDisplay" data-number>3</button>
+                <button class="numDisplay" data-number>4</button>
+                <button class="numDisplay" data-number>5</button>
+                <button class="numDisplay" data-number>6</button>
+                <button class="numDisplay" data-number>7</button>
+                <button class="numDisplay" data-number>8</button>
+                <button class="numDisplay" data-number>9</button>
+                <button class="numDisplay" data-number>0</button>
+                <button class="numDisplay" data-number>.</button>
+                <button data-equal>=</button>
+        </section>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
